another attempt to fix the icon issue

--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,11 @@
+ifdef::env-github[]
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+endif::[]
+
 = Red Hat Agile API Integration Workshop - Microservices-based Managed API Integration
 :imagesdir: img
 
