--- a/lab01/README.adoc
+++ b/lab01/README.adoc
@@ -140,6 +140,23 @@ Before we start the application, add the database driver dependency in the *pom.
 [source,xml]
 ----
 ...
+<repositories>
+    ...
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>restlet-repository</id>
+      <name>Restlet Repository</name>
+      <url>http://maven.restlet.com/</url>
+    </repository>
+</repositories>
+...
+
 <properties>
   ...
   <run.profiles>dev</run.profiles>
